--- a/dev/res/templates/components/_auth.html
+++ b/dev/res/templates/components/_auth.html
@@ -1,5 +1,5 @@
 <form action="http://private-9a0dd-aquaauth.apiary-mock.com" class="form" id="reg" data-next="/profile">
-  <input class="field" name="name" id="name">
+  <input class="field" name="name" id="name" value="Романов Роман Романович" disabled>
   <label for="name" class="fieldLabel">ФИО:</label>
 
   <input class="fieldCard" name="card" id="card" value="66609">
@@ -12,7 +12,7 @@
   </div>
   <label for="card" class="fieldLabel">Карта:</label>
 
-  <input type="tel" class="field" id="tel" name="phone">
+  <input type="tel" class="field" id="tel" name="phone" value="+7(987)333-22-11" disabled>
   <label for="phone" class="fieldLabel">Телефон:</label>
   
   <select class="fieldSelect" name="city_id" id="city">
