--- a/dev/res/sass/components/_login.scss
+++ b/dev/res/sass/components/_login.scss
@@ -22,6 +22,7 @@ $field-borderColor: $blue-300;
 $field-color: $gray-300;
 $field-fontSize: 12px;
 $field-errorColor: $red;
+$field-background: $white;
 
 %field {
   @include tx-font-size($field-fontSize, none);
@@ -44,6 +45,11 @@ $field-errorColor: $red;
 
   &:focus {
     outline: none;
+  }
+
+  &:disabled {
+    opacity: 1;
+    background: $field-background;
   }
 
 }
