--- a/dev/res/templates/components/_auth.html
+++ b/dev/res/templates/components/_auth.html
@@ -31,4 +31,5 @@
   <label for="confirm" class="fieldLabel">Повторите пароль:</label>
   
   <input type="submit" disabled class="submit" value="регистрация">
+  <p class="errorMessage"></p>
 </form>
