--- a/dev/res/templates/components/_balance.html
+++ b/dev/res/templates/components/_balance.html
@@ -1,3 +1,4 @@
+<p class="successMessage">Платеж прошел успешно! Зачисление средств может занять некоторое время.</p>
 <div class="profileInfo">
   <div class="balanceInfo">
     <span class="balanceDetail">
