--- a/dev/res/templates/components/_form.html
+++ b/dev/res/templates/components/_form.html
@@ -1,4 +1,4 @@
-<form action="http://private-9a0dd-aquaauth.apiary-mock.com" class="form" id="auth" data-next="/profile">
+<form action="http://private-1b6b1-aqualogin.apiary-mock.com" class="form" id="auth" data-next="/profile">
   <input type="tel" class="field" id="tel" name="phone">
   <label for="phone" class="fieldLabel">Номер телефона:</label>
   <input type="password" class="field" name="password" id="password">
@@ -6,4 +6,5 @@
   <input type="checkbox" class="fieldCheck" name="save" id="save">
   <label for="save" class="checkLabel">Запомнить</label>
   <input type="submit" disabled class="submit" value="Личный кабинет">
+  <p class="errorMessage"></p>
 </form>
