--- a/dev/res/sass/components/_balance.scss
+++ b/dev/res/sass/components/_balance.scss
@@ -336,3 +336,23 @@ $cardList-borderColor: $blue-300;
   }
 
 }
+
+$successMessage-background: rgba($yellow, .4);
+$successMessage-color: $blue-900;
+
+.successMessage {
+  width: 630px;
+  border-radius: 35px;
+  padding: 15px;
+  box-sizing: border-box;
+  letter-spacing: -.3px;
+  background: $successMessage-background;
+  color: $successMessage-color;
+  margin: -30px 0 30px;
+  text-align: center;
+
+  @include tx-media(phone) {
+    width: auto;
+    margin: -20px 20px 30px;
+  }
+}
